[gd_scene load_steps=8 format=2]

[ext_resource path="res://MultiPlayer/assets/sprites/square.png" type="Texture" id=1]
[ext_resource path="res://MultiPlayer/enemy/enemy.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.4935, 14.6149 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.588, 16.8947 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 17.7104, 18.1575 )

[sub_resource type="CircleShape2D" id=5]
radius = 165.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 100, 0, 0, 1 )
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 3 )

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 4 )

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 5 )

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
